security-platform/vulnerability-management/defectdojo/security/security-policies/kyverno/require-networkpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: defectdojo-require-networkpolicy
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: require-network-policy
    match:
      resources:
        namespaces:
        - defectdojo
        kinds:
        - Pod
    validate:
      message: "Namespace must define a NetworkPolicy"
