security-platform/vulnerability-management/defectdojo/security/security-policies/kyverno/require-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: defectdojo-require-non-root
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: require-run-as-non-root
    match:
      resources:
        namespaces:
        - defectdojo
        kinds:
        - Pod
    validate:
      message: "Containers must not run as root"
      pattern:
        spec:
          securityContext:
            runAsNonRoot: true
