security-platform/vulnerability-management/defectdojo/security/security-policies/kyverno/restrict-image-registries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: defectdojo-restrict-image-registries
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: allowed-registries
    match:
      resources:
        namespaces:
        - defectdojo
        kinds:
        - Pod
    validate:
      message: "Images must come from approved registries"
      pattern:
        spec:
          containers:
          - image: "ghcr.io/* | docker.io/*"
